Co-authored-by: Felix <alrgie@users.noreply.github.com>

--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,17 @@
     background-color: black;
     color: white;
 }
+
+.Header{
+    width: 100%;
+}
+
+.AboutHeader{
+    font-size: larger;
+}
+
+.Main{
+    width: 100%;
+    height: 100%;
+}
+
